[gd_scene load_steps=3 format=3 uid="uid://cqgkwblj0ge77"]

[ext_resource type="Script" path="res://ui/timer/timer.gd" id="1_pe7xu"]
[ext_resource type="Texture2D" uid="uid://byci7ve5bm4t3" path="res://assets/images/Circle.png" id="2_sq3y8"]

[node name="Timer" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_pe7xu")

[node name="Timer" type="Timer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 464.0
offset_bottom = 464.0
scale = Vector2(0.814208, 0.814208)

[node name="TimerDisplay" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "2:00"

[node name="TimeBar" type="TextureProgressBar" parent="CenterContainer"]
layout_mode = 2
max_value = 120.0
fill_mode = 5
texture_under = ExtResource("2_sq3y8")
texture_progress = ExtResource("2_sq3y8")
tint_under = Color(0, 0, 0, 1)
tint_progress = Color(0, 1, 0, 1)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="value_changed" from="CenterContainer/TimeBar" to="." method="_on_time_bar_value_changed"]
